recursion.cons.lessons.recursion.cons.Min.scala.error
min:8: error: not found: value n
	return lambda(n)
                      ^